--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angular-d3-charts": "^5.0.0",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "rxjs": "~6.3.3",
